modernized rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,8 @@
-{so_name, "resource_nif.so"}.
+%% -*- erlang -*-
+{port_specs, [
+	      {"priv/resource_nif.so",["c_src/*.c"]}
+	      ]}.
 
-{port_sources, ["c_src/*.c"]}.
-
-{port_envs, [
-             {"CFLAGS", "$CFLAGS -fPIC"},
-             {"DRV_CFLAGS", "$DRV_CFLAGS -Werror -I include"}
-             ]}.
 
 {edoc_opts, [{doclet, edown_doclet},
 	     {src_path, ["src/"]},
